fix overflow

--- a/src/app/static/css/feed.less
+++ b/src/app/static/css/feed.less
@@ -5,4 +5,5 @@
 .collapsible-header{
 	text-overflow: ellipsis;
   	text-wrap: none;
+  	overflow: hidden;
 }
